# ROSS-Network-Model

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
WL_generation/: generate_workloads.py
WL_generation/topologies/star256/: 0.yaml  1.yaml  10.yaml  100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  117.yaml  118.yaml  119.yaml  12.yaml  120.yaml  121.yaml  122.yaml  123.yaml  124.yaml  125.yaml  126.yaml  127.yaml  128.yaml  129.yaml  13.yaml  130.yaml  131.yaml  132.yaml  133.yaml  (+217 more)
cmake/: FindROSS.cmake
experiments/: hostfile-v-e-weights-pkt  hostfile-vertex-weights-event  hostfile-vertex-weights-event2  hostfile-vertex-weights-pkt  run-baseline.sh  run-edge-weights.sh  run-v-e-weights-pkt.sh  run-vertex-weights-event.sh  run-vertex-weights-pkt.sh  run.sh
experiments/results-scalability-metis/: ross-baseline.csv
experiments/results-scalability-metis-edge-weights/: ross-edge-weights.csv
experiments/results-scalability-metis-edge-weights/stdout/: log-16-0.txt  log-16-1.txt  log-16-2.txt  log-16-3.txt  log-16-4.txt  log-2-0.txt  log-2-1.txt  log-2-2.txt  log-2-3.txt  log-2-4.txt  log-4-0.txt  log-4-1.txt  log-4-2.txt  log-4-3.txt  log-4-4.txt  log-8-0.txt  log-8-1.txt  log-8-2.txt  log-8-3.txt  log-8-4.txt
experiments/results-scalability-metis-v-e-weights-pkt/: ross-v-e-weights-pkt.csv
experiments/results-scalability-metis-v-e-weights-pkt/stdout/: log-16-0.txt  log-16-1.txt  log-16-2.txt  log-16-3.txt  log-16-4.txt  log-2-0.txt  log-2-1.txt  log-2-2.txt  log-2-3.txt  log-2-4.txt  log-29-0.txt  log-29-1.txt  log-29-2.txt  log-29-3.txt  log-29-4.txt  log-4-0.txt  log-4-1.txt  log-4-2.txt  log-4-3.txt  log-4-4.txt  log-57-0.txt  log-57-1.txt  log-57-2.txt  log-57-3.txt  log-57-4.txt  log-8-0.txt  log-8-1.txt  log-8-2.txt  log-8-3.txt  log-8-4.txt
experiments/results-scalability-metis-vertex-weights-event/: ross-vertex-weights-event.csv
experiments/results-scalability-metis-vertex-weights-event/stdout/: log-29-0.txt  log-29-1.txt  log-29-2.txt  log-29-3.txt  log-29-4.txt  log-56-0.txt  log-56-1.txt  log-56-2.txt  log-56-3.txt  log-56-4.txt
experiments/results-scalability-metis-vertex-weights-pkt/: ross-vertex-weights-pkt.csv
experiments/results-scalability-metis-vertex-weights-pkt/stdout/: log-16-0.txt  log-16-1.txt  log-16-2.txt  log-16-3.txt  log-16-4.txt  (+30 more)
model/: CMakeLists.txt  config_parser.c  mail.h  mail_mailbox.c  mail_main.c  mail_post_office.c  network.h  network_main.c  network_map.c  network_switch.c  network_terminal.c  parsers.h  workload_parser.c
model/data/: sort-trace.py
model/qos/: REDdropper.c  meter.c  queue_fifo.c  queue_fifo.h  shaper.c
model/qos/scheduler/: strict_priority.c
model/traffic/: traffic_generation.c
model/util/: config_parser.c  conversion.c  message.c  parser.h  parsers.h  stats.c  workload_parser.c
partition/: graph-for-metis-w-size-scaled-sendrecv.txt.part.8  graph-for-metis-w-size-scaled.txt.part.8  graph-for-metis-w-size.txt.part.8
partition/star16/: star16.txt.2hop.part.3  star16.txt.2hop.part.8  star16.txt.part.2hop.5  star16.txt.part.4  star16.txt.part.5  star16.txt.part.9  star16.txt.unbalanced.1.part.3  star16.txt.unbalanced.2.part.3
partition/star256/: star256.txt.part.12  star256.txt.part.16  star256.txt.part.2  star256.txt.part.4  star256.txt.part.8
tools/: analyse.py  conf  detailed_stats.csv  overall_stats.csv
(+21 files in other folders)
