INCLUDE_DIRECTORIES(${ROSS_BINARY_DIR})

IF(USE_DAMARIS)
    INCLUDE_DIRECTORIES(${DAMARIS_INCLUDE}) 
ENDIF(USE_DAMARIS)
IF(BGPM)
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${BGPM_LIB})
ELSE(NOT(BGPM))
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR})
ENDIF(BGPM)

SET(network_srcs
		network_main.c
		network_switch.c
		network_map.c
		network.h
		model_config.h
		network_terminal.c
		parsers.h
		workload_parser.c
		config_parser.c
)

ADD_EXECUTABLE(network ${network_srcs})

IF(BGPM)
	TARGET_LINK_LIBRARIES(network ROSS imp_bgpm m)
ELSE(NOT(BGPM))
    IF(USE_DAMARIS)
        TARGET_LINK_LIBRARIES(network ROSS ROSS_Damaris m)
    ELSE(NOT(USE_DAMARIS))
        TARGET_LINK_LIBRARIES(network ROSS m)
    ENDIF(USE_DAMARIS)
ENDIF(BGPM)

INSTALL(FILES ${ROSS_BINARY_DIR}/../models/network/network DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
